view'ları düzenledim.

--- a/src/main/resources/public/article.html
+++ b/src/main/resources/public/article.html
@@ -58,6 +58,13 @@
 
                         </div>
                     </div><br>
+                    <div>
+                        <label>Author:</label>
+                        <div>
+                            <input name="Author" type="text">
+
+                        </div>
+                    </div><br>
 
                     <div>
                         <label>Abstract:</label>
